# antenna-claw

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  config.example.json  package_release.ps1  pyproject.toml  requirements.txt  rerun_existing_macros.py
docs/: DEBUGGING_SUMMARY.md  OPENCLAW_INTEGRATION.md  PARAMETER_UPDATE_API.md
examples/: demonstration.ipynb  monopole_example.py  quickstart.py  slotted_patch_example.py  vivaldi_example.py
examples/results_by_chat/vivaldi_antenna_chatgpt/: Antenna.cst  Vivaldi Antenna Modeling CST.html
examples/results_by_chat/vivaldi_antenna_deepseek_zh/: Antenna.cst  DeepSeek_Vivaldi_Antenna.html  RunVBA.py
src/leam/: __init__.py  cli.py  config.py  main.py  service_api.py
src/leam/core/: __init__.py  llm_caller.py  vba_generator.py
src/leam/infrastructure/: __init__.py  cst_gateway.py  output_repository.py  run_record.py
src/leam/models/: __init__.py  session.py
src/leam/postprocess/: __init__.py  consistency.py  topology_checker.py
src/leam/prompts/: Boolean_prompt.md  Dimension_prompt.md  Modeling_2D_prompt.md  Modeling_3D_prompt.md  Parameter_Update_prompt.md  Parameter_prompt.md  materials_extract_prompt.md  materials_vba_prompt.md  simulation_config_prompt.md  (+2 more)
tests/: test_air_pifa_template.py  test_apply_parameter_updates.py  test_new_design_workflow_topology_toggle.py  test_optimization_goals.py  test_optimization_validation_service.py  test_optimize_parameters.py  test_parameter_vba.py  test_project_context_snapshot.py  test_run_record.py  test_service_api.py  test_template_skill_registry.py
(+68 files in other folders)
